# med-gemma

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  writeup.md
.github/workflows/: sync_to_hf.yml
demo/: README.md  app.py  requirements.txt
docs/: ARCHITECTURE.md  eval_results.json  writeup.md
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/fine-tuning/: page.tsx
frontend/src/app/patients/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: EdgeAISafetyCheck.tsx  Header.tsx  Sidebar.tsx
notebooks/: med-gemma-4b-soap-lora.ipynb
src/: __init__.py
src/agents/: __init__.py  base.py  clinical_agent.py  cognitive_orchestrator.py  cxr_agent.py  derm_agent.py  drug_agent.py  image_agent.py  orchestrator.py  path_agent.py  qa_agent.py  tools.py  transcription_agent.py  triage_agent.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py
src/core/: __init__.py  config.py  inference_client.py  models.py  schemas.py
src/utils/: __init__.py  fhir_builder.py
tests/: eval_results.json  eval_synthetic.py  smoke_test.py  test_inference_live.py  test_pipeline.py
