[project]
name = "medscribe-ai"
version = "2.0.0"
description = "Agentic Clinical Documentation System powered by HAI-DEF models (MedGemma, MedASR, MedSigLIP, TxGemma) via HF Serverless Inference API"
readme = "README.md"
requires-python = ">=3.12"
license = "CC-BY-4.0"
dependencies = [
    # API framework
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    # HF Inference API client (calls HAI-DEF models without local weights)
    "huggingface_hub>=0.24.0",
    # Image handling (PIL for pre-processing before API call)
    "Pillow>=10.0.0",
    # Audio handling (read audio bytes before sending to MedASR API)
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    # Utilities
    "requests>=2.31.0",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "eval_*.py"]
asyncio_mode = "auto"
